# paper-survey-agent

./: .env.dist  .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: README.md  generate-tasks.prompt.md
docs/: assignment.md  roles.md  submission.md  tasks.md  team-roles.md
notebooks/: test_agent.ipynb
src/paper_survey_agent/: agent.py  settings.py
src/paper_survey_agent/apis/: __init__.py  arxiv.py  base.py  semantic_scholar.py
src/paper_survey_agent/llm/: client.py  prompts.py
src/paper_survey_agent/models/: __init__.py  paper.py
src/paper_survey_agent/tools/: __init__.py  maintenance.py  ranking.py  retrieval.py
src/paper_survey_agent/tools/generate_search_query/: generate_search_query.py
src/paper_survey_agent/tools/search_and_load_papers_txt/: search_and_load_papers_txt.py
src/paper_survey_agent/tools/search_and_load_papers_txt/utils/: downloader.py  maintenance.py  ranking.py  retrieval.py  text_extractor.py
src/paper_survey_agent/tools/summarize_papers/: summarize_papers.py
src/paper_survey_agent/tools/synthesize_survey/: synthesize_survey.py
